# iq

./: Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml  release.yml
packaging/aur/: .SRCINFO.in  PKGBUILD.in
packaging/homebrew/: iq.rb.in
src/: main.rs
