[package]
name = "iq"
version = "0.1.1"
edition = "2024"
description = "Interactive jq REPL powered by qj"
license = "MIT"
repository = "https://github.com/hyperpuncher/iq"
authors = ["hyperpuncher"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
anyhow = "1"
qj = "0.1.4"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
